--- a/caesar-cipher.html
+++ b/caesar-cipher.html
@@ -11,6 +11,7 @@
         <nav>
             <a href="generate-keys.html">RSA Emulator v1</a>
             <a class="selected" href="caesar-cipher.html">Caesar Cipher</a>
+            <a href="sign-message.html">Sign Message</a>
         </nav>
 
         <div class="page">
