--- a/generate-keys.html
+++ b/generate-keys.html
@@ -11,6 +11,7 @@
         <nav>
             <a class="selected" href="generate-keys.html">RSA Emulator v1</a>
             <a href="caesar-cipher.html">Caesar Cipher</a>
+            <a href="sign-message.html">Sign Message</a>
         </nav>
 
         <div class="page">
@@ -258,7 +259,7 @@
 
 
 <script src="scripts/encoding-helper.js"></script>
-    <script src="scripts/encryption-helper.js"></script>
+<script src="scripts/encryption-helper.js"></script>
     <script>
         (function () {
             var privateKey = document.getElementById("private-key");
