--- a/sign-message.html
+++ b/sign-message.html
@@ -108,13 +108,13 @@
    <body>
 
     <nav>
-        <a class="selected" href="sign-message.html">Sign Message</a>
-        <a href="caesar-cipher.html">Caesar Cipher</a>
         <a href="generate-keys.html">RSA Emulator v1</a>
+        <a href="caesar-cipher.html">Caesar Cipher</a>
+        <a class="selected" href="sign-message.html">Sign Message</a>
     </nav>
 
     <div class="page">
-        <h1>Sign your Message</h1>
+        <h1>Sign your Message (SHA256)</h1>
         <p class="header-description">
             These tools have been implemented using WebCryptoAPI: 
             <a href="https://www.w3.org/TR/WebCryptoAPI/" target="Web Crypto API">Web Crypto API</a>
