Made a prototype for the a animated emulator with buttons and transistions

--- a/caesar-cipher.html
+++ b/caesar-cipher.html
@@ -12,6 +12,7 @@
             <a href="generate-keys.html">RSA Emulator v1</a>
             <a class="selected" href="caesar-cipher.html">Caesar Cipher</a>
             <a href="sign-message.html">Sign Message</a>
+            <a href="animated-emulator.html">animated-emulator</a>
         </nav>
 
         <div class="page">
