--- a/generate-keys.html
+++ b/generate-keys.html
@@ -12,6 +12,8 @@
             <a class="selected" href="generate-keys.html">RSA Emulator v1</a>
             <a href="caesar-cipher.html">Caesar Cipher</a>
             <a href="sign-message.html">Sign Message</a>
+            <a href="animated-emulator.html">animated-emulator</a>
+            
         </nav>
 
         <div class="page">
