--- a/sign-message.html
+++ b/sign-message.html
@@ -111,6 +111,8 @@
         <a href="generate-keys.html">RSA Emulator v1</a>
         <a href="caesar-cipher.html">Caesar Cipher</a>
         <a class="selected" href="sign-message.html">Sign Message</a>
+        <a href="animated-emulator.html">animated-emulator</a>
+        
     </nav>
 
     <div class="page">
