--- a/caesar-cipher.html
+++ b/caesar-cipher.html
@@ -24,16 +24,16 @@
             </p>
             <div class="field">
                 <label for="caesar-key">Caesar Cipher Key (Number of places to shift)</label>
-                <textarea id="caesar-key" rows="3"></textarea>
+                <textarea id="caesar-key" rows="3">0</textarea>
             </div>
             <div class="field">
                 <label for="user-message">Message to Encrypt</label>
-                <textarea id="user-message" rows="3"></textarea>
+                <textarea id="user-message" rows="3">Test message! Feel free to alter.</textarea>
             </div>
             <div class="field">
                 <label for="caesar-key-output">Encrypted Message Output</label>
                 <a id="caesar-key-download" class="download" download="caesar.pub"></a>
-                <textarea id="caesar-key-show" rows="3" readonly></textarea>
+                <textarea id="caesar-key-show" rows="3" readonly>Your output will show here when you press "Submit Key and Text".</textarea>
             </div>
             <button id="cEbutton">Submit Key and Text</button>
             <div id="cEmessage"></div>
@@ -44,16 +44,16 @@
             </p>
             <div class="field">
                 <label for="caesar-key2">Caesar Cipher Key</label>
-                <textarea id="caesar-key2" rows="3"></textarea>
+                <textarea id="caesar-key2" rows="3">Input the same key here as the encrypted message.</textarea>
             </div>
             <div class="field">
                 <label for="enciphered-message">Message to Decrypt</label>
-                <textarea id="enciphered-message" rows="3"></textarea>
+                <textarea id="enciphered-message" rows="3">Input the message you encrypted above.</textarea>
             </div>
             <div class="field">
                 <label for="enciphered-message-download">Decrypted Message Output</label>
                 <a id="enciphered-message-download" class="download" download="caesar.pub"></a>
-                <textarea id="enciphered-message-show" rows="3" readonly></textarea>
+                <textarea id="enciphered-message-show" rows="3" readonly>The decrypted message will appear here!</textarea>
             </div>
             <button id="cDbutton">Submit Key and Text</button>
             <div id="cDmessage"></div>
@@ -83,6 +83,7 @@
             };
 
             var process = function () {
+                error(""); //Clears error, so the error doesn't remain from a previous input.
                 caesarKey = document.getElementById("caesar-key");
                 userMessage = document.getElementById("user-message");
                 caesarShow = document.getElementById("caesar-key-show");
@@ -94,11 +95,26 @@
                 {
                     return error("Key must be specified.");
                 }
-                    numContainer = caesarKey.value;
+
+
+                numContainer = caesarKey.value;
 
                     
+
+                if (caesarKey.value.trim() === "0")
+                {
+                    testerOutput = "Hello, it's <yourname>. The last email you sent me had something strange in it, would you tell me why? I uploaded a screenshot here at scamsite.phishinglink";
+                    caesarShow.innerHTML = testerOutput;
+
+
+                    return error("INTERCEPTED! If your online communications are not encrypted, 'men in the middle' can more easily read and alter your outgoing messages. In this case, your intended recipient received a convincing email with an attached scam link in YOUR name. Make sure to set a key other than 0!");
+
+                }
+                else
+                {
                     testerOutput = caesarShift(userMessage.value, parseInt(numContainer));
                     caesarShow.innerHTML = testerOutput;
+                }
 
             }; 
 
