--- a/animated-emulator.html
+++ b/animated-emulator.html
@@ -14,7 +14,7 @@
     <nav>
         <a href="generate-keys.html">RSA Emulator v1</a>
         <a href="caesar-cipher.html">Caesar Cipher</a>
-        <a href="sign-message.html">sign message</a>
+        <a href="sign-message.html">Sign Message</a>
         <a class="selected" href="animated-emulator.html">animated-emulator</a>
 
         
