--- a/animated-emulator.html
+++ b/animated-emulator.html
@@ -12,10 +12,10 @@
    <body>
 
     <nav>
-        <a href="generate-keys.html">RSA Emulator v1</a>
         <a href="caesar-cipher.html">Caesar Cipher</a>
+        <a href="generate-keys.html">RSA Emulator v1</a>
         <a href="sign-message.html">Sign Message</a>
-        <a class="selected" href="animated-emulator.html">animated-emulator</a>
+        <a class="selected" href="animated-emulator.html">Animated Emulator</a>
 
         
     </nav>
