--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     </head>
 
     <body style="display: none;">
-        <script>window.location = "generate-keys.html";</script>
+        <script>window.location = "caesar-cipher.html";</script>
     </body>
 </html>
