--- a/caesar-cipher.html
+++ b/caesar-cipher.html
@@ -9,10 +9,10 @@
 
     <body>
         <nav>
-            <a href="generate-keys.html">RSA Emulator v1</a>
             <a class="selected" href="caesar-cipher.html">Caesar Cipher</a>
+            <a href="generate-keys.html">RSA Emulator v1</a>
             <a href="sign-message.html">Sign Message</a>
-            <a href="animated-emulator.html">animated-emulator</a>
+            <a href="animated-emulator.html">Animated Emulator</a>
         </nav>
 
         <div class="page">
