--- a/sign-message.html
+++ b/sign-message.html
@@ -108,10 +108,10 @@
    <body>
 
     <nav>
-        <a href="generate-keys.html">RSA Emulator v1</a>
         <a href="caesar-cipher.html">Caesar Cipher</a>
+        <a href="generate-keys.html">RSA Emulator v1</a>
         <a class="selected" href="sign-message.html">Sign Message</a>
-        <a href="animated-emulator.html">animated-emulator</a>
+        <a href="animated-emulator.html">Animated Emulator</a>
         
     </nav>
 
