--- a/caesar-cipher.html
+++ b/caesar-cipher.html
@@ -13,6 +13,7 @@
             <a href="generate-keys.html">RSA Emulator v1</a>
             <a href="sign-message.html">Sign Message</a>
             <a href="animated-emulator.html">Animated Emulator</a>
+            <a href="sms-caesar.html">SMS-Caesar</a>
         </nav>
 
         <div class="page">
@@ -57,6 +58,7 @@
             </div>
             <button id="cDbutton">Submit Key and Text</button>
             <div id="cDmessage"></div>
+
             <!---Caesar Key Encryption Function-->
     <script src="scripts/encoding-helper.js"></script>
     <script src="scripts/encryption-helper.js"></script>
@@ -121,7 +123,7 @@
             button.addEventListener("click", process);
 
         })();
-    </script>
+    </script>  
 
     <!---Caesar Key Decryption Function-->
     <script src="scripts/encoding-helper.js"></script>
