--- a/encrypt-text.html
+++ b/encrypt-text.html
@@ -13,6 +13,7 @@
             <a href="decrypt-text.html">Decrypt Text</a>
             <a href="encrypt-file.html">Encrypt File</a>
             <a href="decrypt-file.html">Decrypt File</a>
+            <a href="sms-caesar.html">SMS-Caesar</a>
         </nav>
 
         <div class="page">
