--- a/generate-keys.html
+++ b/generate-keys.html
@@ -13,6 +13,7 @@
             <a class="selected" href="generate-keys.html">RSA Emulator v1</a>
             <a href="sign-message.html">Sign Message</a>
             <a href="animated-emulator.html">Animated Emulator</a>
+            <a href="sms-caesar.html">SMS-Caesar</a>
             
         </nav>
 
