--- a/encrypt-text.html
+++ b/encrypt-text.html
@@ -14,6 +14,7 @@
             <a href="encrypt-file.html">Encrypt File</a>
             <a href="decrypt-file.html">Decrypt File</a>
             <a href="sms-caesar.html">SMS-Caesar</a>
+            <a href="Caesar-Cipher-Lab/mockup-caesar-lab.html">Caesar Lab</a>
         </nav>
 
         <div class="page">
