--- a/generate-keys.html
+++ b/generate-keys.html
@@ -14,7 +14,7 @@
             <a href="sign-message.html">Sign Message</a>
             <a href="animated-emulator.html">Animated Emulator</a>
             <a href="sms-caesar.html">SMS-Caesar</a>
-            
+            <a href="Caesar-Cipher-Lab/mockup-caesar-lab.html">Caesar Lab</a>
         </nav>
 
         <div class="page">
