--- a/sign-message.html
+++ b/sign-message.html
@@ -17,7 +17,7 @@
     <a class="selected" href="sign-message.html">Sign Message</a>
     <a href="animated-emulator.html">Animated Emulator</a>
     <a href="sms-caesar.html">SMS-Caesar</a>
-
+    <a href="Caesar-Cipher-Lab/mockup-caesar-lab.html">Caesar Lab</a>
   </nav>
 
   <div class="page">
