--- a/sms-caesar.html
+++ b/sms-caesar.html
@@ -103,6 +103,7 @@
     <a href="sign-message.html">Sign Message</a>
     <a href="animated-emulator.html">Animated Emulator</a>
     <a class="selected" href="sms-caesar.html">SMS-Caesar</a>
+    <a href="Caesar-Cipher-Lab/mockup-caesar-lab.html">Caesar Lab</a>
   </nav>
 
   <div style="text-align:center">
