Caesar Lab Additions
Continued development for templates for the Caesar Lab

--- a/Caesar-Cipher-Lab/caesar-lab-mainpage.html
+++ b/Caesar-Cipher-Lab/caesar-lab-mainpage.html
@@ -12,7 +12,7 @@
         <a href="../sign-message.html">Sign Message</a>
         <a href="../animated-emulator.html">Animated Emulator</a>
         <a href="../sms-caesar.html">SMS-Caesar</a>
-        <a class="selected" href="../mockup-caesar-lab.html">Caesar Lab</a>
+        <a class="selected" href="../caesar-lab-mainpage.html">Caesar Lab</a>
     </nav>
 
     <div class="page">
