--- a/Caesar-Cipher-Lab/caesar-lab-contents.html
+++ b/Caesar-Cipher-Lab/caesar-lab-contents.html
@@ -6,7 +6,7 @@
     </head>
 
     <nav>
-        <a href="mockup-caesar-lab.html">Exit Caesar Lab</a>
+        <a href="caesar-lab-mainpage.html">Exit Caesar Lab</a>
     </nav>
 
     <div class="page">
@@ -15,23 +15,45 @@
             When we send a message over the internet, whether it be from our phones or computers, it is in what we call the Public Domain.
             This message is able to be viewed by anyone lurking on the public domain, which we have named Hackers. Let's see an example...
         </p>
-        <button id="visibility" onclick="toggleVisibility();">Show Example</button>
+        <button id="visibility" onclick="toggleVisibility('example', 'visibility', false);">Show Example</button>
         <script type="text/javascript">
-            function toggleVisibility()
+            function toggleVisibility(divId, buttonId=null, onlyHideButton=true)
             {
-                var exampleDiv = document.getElementById('example');
-                var button = document.getElementById('visibility');
+                var exampleDiv = document.getElementById(divId);
+                var button;
+                if(buttonId != null)
+                {
+                    button = document.getElementById(buttonId);
+                }
                 
                 if(exampleDiv.style.visibility == "hidden") {
                     exampleDiv.style.visibility = "visible";
-                    button.style.visibility = "hidden";
+                    if(buttonId != null) 
+                    { 
+                        if(onlyHideButton)
+                        {
+                            button.style.visibility = "hidden"; 
+                        }else{
+                            button.style.display = "none"; 
+                        }
+                    }
                 } else {
                     exampleDiv.style.visibility = "hidden";
                 }
             }
         </script>
         <div id="example" class="header-description" style="visibility:hidden">
-            PlaceHolder for gif image
+            <p>
+                [PlaceHolder for gif image showing plaintext getting attacked by the hackers.]
+            </p>
+            <button id="visibility2" onclick="toggleVisibility('next', 'visibility2', false);">Next</button>
+        </div>
+        <div id="next" class="header-description" style="visibility:hidden">
+            <p>
+                As you can see from the gif, if we don't encrypt our data when its in the hostile territory (the open internet) then it is susceptible to being seen and tampered with.
+                This is why we will now go and learn how to do the basic encryption method known as the Caesar Cipher. 
+            </p>
+            <button ><a href="caesar-lab-mainpage.html">Next Page</a></button>
         </div>
     </div>
 </body>
