encrypt/decrypt animation
Commit for both Sean and I. Some alterations needed for decryption but it is the same logic.

--- a/CIA-Labs/cia-lab-shift.html
+++ b/CIA-Labs/cia-lab-shift.html
@@ -75,6 +75,11 @@
                     })();
                 </script>
                 <!-- Cipher Table END -->
+                <p></p>
+                <!-- Message Table Start -->
+                <table name="message" id="messageTable">
+                </table>
+                <!-- Message Table END-->
             </p>
             <script src="../scripts/caesar-shift.js"> </script>
             
@@ -82,7 +87,7 @@
             <!-- All we really need to do for this page in terms of functionality is 2 things: -->
                 <!-- First, we need to make the changes to the shifting animation per Dr. Wang's instructions (label shift rows and have show each shift on a new row) -->
                 <!-- Second, there needs to be an input field to change the animation speed and also the shift key which gets put into the button function below -->
-            <button id="runShift" onclick="runShiftAsyncButton('visibility2', 4 , 100);">Run Example Shift</button>
+            <button id="runShift" onclick="runShiftAsyncButton('visibility2', 4 , 100, 'Test Message');">Run Example Shift</button>
             <button id="visibility2" onclick="toggleVisibility('next', 'visibility2', false);" style="visibility:hidden;">Next</button>
         </div>
         <div id="next" class="header-description" style="visibility:hidden">
