Re-Ordering Pages

--- a/CIA-Labs/cia-labs-home.html
+++ b/CIA-Labs/cia-labs-home.html
@@ -24,7 +24,7 @@
             In order to understand why we use all three parts of the triad together, one should first learn about the parts individually.
             The links below will walk you through the basics of each of the three parts of the CIA triad by using practical examples and visualizations.
         </p>
-        <a href="cia-lab-contents.html"><button type="button">Confidentiality</button></a> 
+        <a href="cia-lab-overall-diagram.html"><button type="button">Confidentiality</button></a> 
         <br><br>
         <button type="button" disabled>Integrity (Under Construction)</button>
         <br><br>
