--- a/CIA-Labs/cia-lab-overall-diagram.html
+++ b/CIA-Labs/cia-lab-overall-diagram.html
@@ -7,6 +7,8 @@
 
     <nav>
         <a href="cia-labs-home.html">Exit Lab</a>
+        <a href="cia-lab-contents.html">Further Reading</a>
+        <a href="cia-lab-shift.html">Caesar Shift</a>
     </nav>
     <div class="page">
         <h1>CIA Lab 1: Confidentiality - Try it out</h1>
