--- a/CIA-Labs/cia-labs-home.html
+++ b/CIA-Labs/cia-labs-home.html
@@ -11,7 +11,7 @@
         <a href="../sign-message.html">Sign Message</a>
         <a href="../animated-emulator.html">Animated Emulator</a>
         <a href="../sms-caesar.html">SMS-Caesar</a>
-        <a class="selected" href="../caesar-lab-mainpage.html">Caesar Lab</a>
+        <a class="selected" href="cia-labs-home.html">CIA Labs</a>
     </nav>
 
     <div class="page">
