updated top bar, general code cleanup, achieving old pages/files, and button changes to the CIA Lab 1

--- a/sign-message.html
+++ b/sign-message.html
@@ -15,9 +15,7 @@
     <a href="caesar-cipher.html">Caesar Cipher</a>
     <a href="generate-keys.html">RSA Emulator v1</a>
     <a class="selected" href="sign-message.html">Sign Message</a>
-    <a href="animated-emulator.html">Animated Emulator</a>
-    <a href="sms-caesar.html">SMS-Caesar</a>
-    <a href="Caesar-Cipher-Lab/caesar-lab-mainpage.html">Caesar Lab</a>
+    <a href="CIA-Labs\cia-labs-home.html">Caesar Lab</a>
   </nav>
 
   <div class="page">
