--- a/generate-keys.html
+++ b/generate-keys.html
@@ -12,9 +12,7 @@
             <a href="caesar-cipher.html">Caesar Cipher</a>
             <a class="selected" href="generate-keys.html">RSA Emulator v1</a>
             <a href="sign-message.html">Sign Message</a>
-            <a href="animated-emulator.html">Animated Emulator</a>
-            <a href="sms-caesar.html">SMS-Caesar</a>
-            <a href="Caesar-Cipher-Lab/caesar-lab-mainpage.html">Caesar Lab</a>
+            <a href="CIA-Labs\cia-labs-home.html">Caesar Lab</a>
         </nav>
 
         <div class="page">
