Ease of Use Improvements
Cleaning up the header, changing homepage, wording for different pages, and creating an extra button on the overall diagram to point to the next step of the lab.

--- a/CIA-Labs/cia-lab-contents.html
+++ b/CIA-Labs/cia-lab-contents.html
@@ -6,24 +6,24 @@
     </head>
 
     <nav>
-        <a href="cia-labs-home.html">Exit CIA Lab</a>
+        <a href="cia-labs-home.html">Exit Lab</a>
+        <a href="cia-lab-overall-diagram.html">Visualizer</a>
+        <a href="cia-lab-contents.html">Explanation</a>
+        <a href="cia-lab-shift.html">Caesar Shift</a>
     </nav>
 
     <div class="page">
         <h1>CIA Lab 1: Confidentiality - Why It's Important</h1>
         <p class="header-description">
-            Let's say that you want to pass a note to one of your classmates, but they are all the way across the classroom. You will have to send that
-            message through a public environment that you are not in control of. 
+            What if you sat across the classroom from your friend, and you wanted to pass them a note? Would you trust the person at each desk between you and your friend not to read it?
         </p>
 
         <p class="header-description">
-            If this message has sensitive contents though, you will need a way
-            to make sure only the intended recipient reads that message; in other words you want to preserve the <b>Confidentiality</b> of that message.
+            You have to make sure the message you're passing can't be read; in other words you want to preserve the <b>Confidentiality</b> of that message.
         </p>
 
         <p class="header-description">
-            The same is true when talking about communications over the internet. Anyone can see what is passing through the internet which means
-            we need to devise a way to ensure our messages are safe from those who might be listening in:
+            The same is true when talking about communications over the internet. Check out the example below!
         </p>
 
         <button id="visibility" onclick="toggleVisibility('example', 'visibility', false);">Show Example</button>
@@ -36,8 +36,8 @@
         </div>
         <div id="next" class="header-description" style="visibility:hidden">
             <p>
-                As you can see from the gif, if we don't encrypt our data when it is in the hostile environment (the open internet) then it is susceptible to being seen and potentially even tampered with.
-                One way we can go about encrypting our message to ensure its confidentiality is by utilizing the <b>Caesar Cipher</b>. 
+                If we don't encrypt our data and make it unreadable to strangers, it might be seen by the wrong people, or even tampered with by hackers.
+                One way we can encrypt a message in order to ensure its confidentiality is by utilizing the <b>Caesar Cipher</b>. 
             </p>
             <button ><a href="cia-lab-shift.html">Next Page</a></button>
         </div>
