--- a/CIA-Labs/cia-lab-shift.html
+++ b/CIA-Labs/cia-lab-shift.html
@@ -7,6 +7,9 @@
 
     <nav>
         <a href="cia-labs-home.html">Exit Lab</a>
+        <a href="cia-lab-overall-diagram.html">Visualizer</a>
+        <a href="cia-lab-contents.html">Explanation</a>
+        <a href="cia-lab-shift.html">Caesar Shift</a>
     </nav>
 
     <div class="page">
