--- a/CIA-Labs/cia-labs-home.html
+++ b/CIA-Labs/cia-labs-home.html
@@ -6,21 +6,22 @@
     </head>
 
     <nav>
+        <a class="selected" href="cia-labs-home.html">CIA Labs</a>
+        <!--Tentatively going to remove these from the available headers for now- if we need use of them for testing purposes, we can open in live server. 
+            Most of the functionality on these pages will be shifted to the CIA labs portion anyways. 
         <a href="../caesar-cipher.html">Caesar Cipher</a>
         <a href="../generate-keys.html">RSA Emulator v1</a>
-        <a href="../sign-message.html">Sign Message</a>
-        <a class="selected" href="cia-labs-home.html">CIA Labs</a>
+        <a href="../sign-message.html">Sign Message</a>-->
     </nav>
 
     <div class="page">
         <h1>CIA Labs</h1>
         <p class="header-description">
-            Understanding the principles of Confidentiality, Integrity, and Availability (The CIA Triad) is important not just for imformation security
-            professionals, but also the users of the products and systems where these principles are used. 
+            The security principles of Confidentiality, Integrity, and Availability (often referred to as the CIA Triad) helps us keep our private information safe.
         </p>
         <p class="header-description">
-            In order to understand why we use all three parts of the triad together, one should first learn about the parts individually.
             The links below will walk you through the basics of each of the three parts of the CIA triad by using practical examples and visualizations.
+            Understanding these different security principles allows us to carry on browsing safely. 
         </p>
         <a href="cia-lab-overall-diagram.html"><button type="button">Confidentiality</button></a> 
         <br><br>
