User Input in Shift
1. Text box added and accepts user input to encrypt
2. Added box for key shift value
3. Added a checkbox to change speeds of the cipher animation
     - Through testing, this isn't working and is instead doing '0' speed as default.
     - The checkbox is also in an odd location, but this was just to get stuff working rather than how it looks.
4. I attempted to use the "pattern" attribute for input validation, but it wasn't working.
     - For the user message, the cipher skips over numbers and unknown characters. All lowercase text automatically becomes uppercase.
     - If the user inputs an invalid value for the key, it will default to '0' for no shift. If the user inputs a large value, the script already takes care of the modular calculation.

--- a/CIA-Labs/cia-lab-shift.html
+++ b/CIA-Labs/cia-lab-shift.html
@@ -90,7 +90,37 @@
             <!-- All we really need to do for this page in terms of functionality is 2 things: -->
                 <!-- First, we need to make the changes to the shifting animation per Dr. Wang's instructions (label shift rows and have show each shift on a new row) -->
                 <!-- Second, there needs to be an input field to change the animation speed and also the shift key which gets put into the button function below -->
-            <button id="runShift" onclick="runShiftAsyncButton('visibility2', 4 , 100, 'TEST MESSAGE'), getElementById('runShift').style.display = 'block'; this.style.display = 'none'">Run Example Shift</button>
+                <strong>x10 Speed: </strong><input type="checkbox" id="myCheck" width=auto>
+
+                    <label for="user-message"><strong>Input Message to Encrypt:</strong></label>
+                    <input type="text" id="user-message" name="user-message" pattern="[A]" title="All Capital Message"><br><br>
+
+                <label for="key"> <br /><strong>Caesar Cipher Key (Number of places to shift)</strong></label>
+                    <input id="key" type="number" placeholder="0" value="0" max="26" min="-26" pattern="[0-9]+"/>
+
+                    <!-- Each of these 3 functions apply to reading user input for the Caesar Cipher demonstration-->
+                    <script>
+                        function shiftPlacement() 
+                        {
+                            let placement = document.getElementById("key");
+                            return placement.value;
+                        }
+
+                        function speedCheckbox() 
+                         {
+                            let speed = 500;
+                          if (document.getElementById("myCheck").checked) {speed = 100;} else {speed = 1000;}
+                          return speed.value;
+                         }
+
+                         function inputMessage() 
+                         {
+                            var msg2 = document.getElementById("user-message");
+                            return msg2.value.toUpperCase();
+                         }
+                        </script>
+
+            <button id="runShift" onclick="runShiftAsyncButton('visibility2', shiftPlacement(), speedCheckbox(), inputMessage()), getElementById('runShift').style.display = 'block'; this.style.display = 'none'">Run Example Shift</button>
             <button id="reset" onclick="location.reload()">Reset</button>
             <button id="visibility2" onclick="toggleVisibility('next', 'visibility2', false);" style="visibility:hidden;">Next</button>
         </div>
