--- a/CIA-Labs/cia-lab-overall-diagram.html
+++ b/CIA-Labs/cia-lab-overall-diagram.html
@@ -91,7 +91,7 @@
             readonly
             />
         </div>
-        <div style="position:absolute; left:10px; bottom:350px">
+        <div style="position:absolute; left:10px; bottom:350px" , hidden>
             <label for="aEncryptCopy"><strong>Encrypted Message</strong></label>
             <input
             id="aEncryptCopy"
@@ -101,6 +101,7 @@
             />
         </div>
         <!---BOB boxes-->
+        <!--Now hidden extra box-->>
         <div style="position:fixed; right:10px; bottom:350px">
             <label for="bDecrypt"><strong>Decrypted Message</strong></label>
             <input
