CIA lab shift anim fix

--- a/CIA-Labs/cia-lab-shift.html
+++ b/CIA-Labs/cia-lab-shift.html
@@ -108,9 +108,9 @@
 
                         function speedCheckbox() 
                          {
-                            let speed = 250;
-                            if (document.getElementById("myCheck").checked) {speed = 100;}
-                            console.log(speed);
+                            let speed = 200;
+                            if (document.getElementById("myCheck").checked) {speed = 75;}
+                            //console.log(speed);
                             return speed;
                          }
 
